2008-06-14  Stefan Jahn  <stefan@lkcc.org>

	* EKV26pMOS.cpp (EKV26pMOS), EKV26nMOS.cpp (EKV26nMOS): Added new
	EPFL-EKV MOSFET V2.6 models.  Thanks to Mike Brinson!

2008-04-01  Stefan Jahn  <stefan@lkcc.org>

	* MESFET.cpp (MESFET): Added new MESFET Verilog-A device.  Thanks
	to Mike Brinson!

2008-03-31  Stefan Jahn  <stefan@lkcc.org>

	* sp_sim.cpp (recreate), param_sweep.cpp (recreate), tr_sim.cpp
	(recreate), ac_sim.cpp (recreate): Fixed graphical bug (property
	display) when changing from lin/log to const/list by cursor keys.

2008-02-21  Stefan Jahn  <stefan@lkcc.org>

	* rfedd2p.cpp (RFedd2P): Added new 2-port RF-EDD also containing
	H-, G- and A-parameters.

2008-02-17  Stefan Jahn  <stefan@lkcc.org>

	* rfedd.cpp (RFedd): Added preliminary implementation of an
	equation defined RF device.

2008-02-08  Stefan Jahn  <stefan@lkcc.org>

	* potentiometer.cpp (potentiometer): Added new Potentiometer
	Verilog-A model.  Thanks to Mike!

2008-01-25  Stefan Jahn  <stefan@lkcc.org>

	* component.cpp (getComponentFromName): Fixed loading/undo/redo of
	thyristor component.

2008-01-21  Stefan Jahn  <stefan@lkcc.org>

	* hic0_full.cpp (hic0_full): Added HICUM L0 v1.12 component.

2008-01-19  Stefan Jahn  <stefan@lkcc.org>

	* log_amp.cpp (log_amp): Added new Logarithmic Amplifier verilog
	device.  Thanks to Mike Brinson!

2008-01-16  Stefan Jahn  <stefan@lkcc.org>

	* diac.cpp (Diac): Added some more properties.

2008-01-02  Stefan Jahn  <stefan@lkcc.org>

	* triac.cpp (Triac), thyristor.cpp (Thyristor), diac.cpp (Diac):
	Added new components.

2007-12-26  Stefan Jahn  <stefan@lkcc.org>

	* hic2_full.cpp (hic2_full): Added units to property descriptions.
	Fixed default symbol (npn).

2007-12-20  Stefan Jahn  <stefan@lkcc.org>

	* hic2_full.h (class hic2_full): Added HICUM L2 v2.22 component.

2007-12-13  Stefan Jahn  <stefan@lkcc.org>

	* mod_amp.cpp (mod_amp): Added new Modular OpAmp verilog device.
	Thanks to Mike Brinson!

2007-10-23  Stefan Jahn  <stefan@lkcc.org>