@@ -46,7 +46,7 @@ SOURCES = phaseshifter.cpp gyrator.cpp componentdialog.cpp    \
   hicumL2p1.cpp HBT_X.cpp verilogfile.cpp vexp.cpp iexp.cpp eqndefined.cpp    \
   vfile.cpp ifile.cpp mod_amp.cpp hic2_full.cpp thyristor.cpp triac.cpp       \
   diac.cpp log_amp.cpp hic0_full.cpp potentiometer.cpp rfedd.cpp rfedd2p.cpp  \
-  MESFET.cpp EKV26nMOS.cpp EKV26pMOS.cpp
+  MESFET.cpp EKV26nMOS.cpp EKV26pMOS.cpp rectline.cpp
 
 # List of special Qt files.
 MOCHEADERS = componentdialog.h spicedialog.h optimizedialog.h spicefile.h
