@@ -6666,6 +6666,18 @@ Použití:  qucsedit [-r] soubor
         <source>noise figure</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>widest side</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>shortest side</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Rectangular Waveguide</source>
+        <translation type="unfinished">Obdélníkový vodič</translation>
+    </message>
 </context>
 <context>
     <name>QucsActions</name>
