@@ -6448,6 +6448,18 @@ Use:  qucsedit [-r] archivo
         <source>noise figure</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>widest side</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>shortest side</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Rectangular Waveguide</source>
+        <translation type="unfinished">Guiaondas rectángular</translation>
+    </message>
 </context>
 <context>
     <name>QucsActions</name>
