@@ -6472,6 +6472,18 @@ Invocation :  qucsedit [-r] fichier
         <source>noise figure</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>widest side</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>shortest side</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Rectangular Waveguide</source>
+        <translation type="unfinished">Guide rectangulaire</translation>
+    </message>
 </context>
 <context>
     <name>QucsActions</name>
