@@ -6442,6 +6442,18 @@ Digitális szimuláció</translation>
         <source>noise figure</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>widest side</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>shortest side</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Rectangular Waveguide</source>
+        <translation type="unfinished">Szögletes hullámvezető</translation>
+    </message>
 </context>
 <context>
     <name>QucsActions</name>
