@@ -6504,6 +6504,18 @@ Stosowanie:  qucsedit [-r] plik
         <source>noise figure</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>widest side</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>shortest side</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Rectangular Waveguide</source>
+        <translation type="unfinished">Falowód prostokątny</translation>
+    </message>
 </context>
 <context>
     <name>QucsActions</name>
