@@ -6295,6 +6295,18 @@ Kullanım:  qucsedit [-r] kütük
         <source>noise figure</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>widest side</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>shortest side</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Rectangular Waveguide</source>
+        <translation type="unfinished">Dikdörtgen Dalga Kılavuzu</translation>
+    </message>
 </context>
 <context>
     <name>QucsActions</name>
